--- a/src/components/SelectionList/SelectionList.css
+++ b/src/components/SelectionList/SelectionList.css
@@ -1,6 +1,6 @@
 .SelectionList{
     height: 100%;
-    /* transition: 1s all; */
+    transition: 1s all;
 }
 
 .no-list-style{
@@ -20,21 +20,68 @@ ul{
 .option{
     width: 0;
     height: 100%;
-    background: red;
+    background: url('../../assets/img/default.png') no-repeat;
+    background-size: cover !important;
+    background-position: center !important;
     transition: 1s all linear;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: #fff;
+    font-weight: 300;
 }
 
 .option.active {
     width: 100%;
-    background: blue
+}
+
+.option .content{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 0 10%;
+    transition: 1.2s all;
+    transition-delay: 0.3s;
+    opacity: 0;
+    backface-visibility: hidden;
+    -webkit-font-smoothing: subpixel-antialiased;
+    transform: translateZ(0);
+}
+
+.option.active .content{
+    margin: 0 20%;
+    transform: scale(2);
+    opacity: 1;
+}
+
+.show .option.active .content{
+    margin: 0 10%;
+    transform: scale(1);
+    opacity: 1;
+}
+
+.show .option .content{
+    opacity: 1;
+}
+
+.title{
+    font-size: 0.8em;
+    font-weight: 400;
+    margin-bottom: 0.2em;
+}
+
+.type{
+    opacity: 0.5;
+    font-size: 0.6em;
+}
+
+.SelectionList.show li{
+    width: 100%;
 }
 
 /* .SelectionList.show{
     padding-top: 50px;
     height: calc(100% - 50px);
 } */
-
-.SelectionList.show li{
-    width: 100%;
-}
